# rust_practice_book

./: .gitignore  README.md
apps/: Cargo.toml
apps/command/: Cargo.toml
apps/common/: Cargo.toml
apps/common/src/: lib.rs  mongo.rs
apps/common/tests/: connect_db.rs  example.rs
apps/commons/: Cargo.toml
apps/commons/src/: jwt.rs  lib.rs  mongo.rs
apps/commons/tests/: connect_db.rs  example.rs
apps/demo/: .env  Cargo.toml
apps/demo/src/: auth_handler.rs  errors.rs  invitation_handler.rs  lib.rs  models.rs  register_handler.rs  schema.rs
apps/demo/tests/: common.rs  invitation.rs  register_with_invitation.rs
apps/docker/: rabbit-docker-compose.yml
apps/entity/: Cargo.toml
apps/entity/src/: post.rs
apps/entity/tests/: crud.rs
apps/migration/: .env  Cargo.toml
apps/migration/src/: m20220120_000001_create_post_table.rs
apps/restapp/: .env  Cargo.toml
apps/restapp/src/: err.rs  errors.rs  github.rs  jwt_handler.rs  lib.rs  main.rs  mongo_crud.rs  rabbit_handler.rs  state.rs
apps/restapp/tests/: auth_jwt_current_user.rs  common.rs  compilation_features.rs  err.rs  github.rs  jwt_login.rs  jwt_logout.rs  mongo_crud.rs  rabbit.rs
apps/restapp/tests/support/: server.rs
async_prog/channeltokyo/: Cargo.toml
async_prog/channeltokyo/src/: main.rs
async_prog/echotokyo/: Cargo.toml
async_prog/echotokyob/: Cargo.toml
async_prog/futuretokyo/: Cargo.toml
async_prog/futuretokyo/src/: main.rs
async_prog/hellotokyo/: Cargo.toml
async_prog/iotokyo/: Cargo.toml
async_prog/iotokyo/src/: main.rs
async_prog/minitokyo/: Cargo.toml
async_prog/minitokyo/src/: main.rs
async_prog/streamtokyo/: Cargo.toml
basic_macros/basic2/: Cargo.toml
basic_macros/basic2/src/: main.rs
chapter_1/hello_cargo/: Cargo.toml
chapter_10/: life_2.rs
chapter_10/largest/: Cargo.toml
chapter_10/pair/: Cargo.toml
chapter_10/pair/src/: main.rs
chapter_10/tweet1/: Cargo.toml
chapter_10/tweet2/: Cargo.toml
chapter_11/adder/: Cargo.toml
chapter_11/adder/src/: lib.rs
chapter_11/adder2/: Cargo.toml
chapter_11/adder2/src/: lib.rs
chapter_11/adder3/: Cargo.toml
chapter_11/adder3/tests/: integration_test.rs
chapter_11/guessing_game/: Cargo.toml
chapter_11/guessing_game/src/: main.rs
chapter_12/minigrep/src/: lib.rs
chapter_13/iterex/: Cargo.toml
chapter_13/iterex/src/: lib.rs
chapter_13/minigrep/: Cargo.toml
chapter_13/partialiter/: Cargo.toml
chapter_13/partialiter/src/: main.rs
chapter_13/simulated/: Cargo.toml
chapter_13/simulated/src/: main.rs
chapter_13/simulated2/: Cargo.toml
chapter_13/simulated2/src/: main.rs
chapter_14/add/add-one/: Cargo.toml
chapter_14/add/add-two/: Cargo.toml
chapter_14/add/adder/: Cargo.toml
chapter_14/art/: Cargo.toml
chapter_14/art/src/: lib.rs
chapter_14/mycrate/: Cargo.toml
chapter_14/mycrate/src/: lib.rs
chapter_15/messenger/: Cargo.toml
chapter_15/messenger/src/: lib.rs
chapter_15/my_rc/: Cargo.toml
chapter_15/my_refcell/: Cargo.toml
chapter_15/mybox/: Cargo.toml
chapter_15/mybox/src/: lib.rs
chapter_15/smart_pointer/: Cargo.toml
chapter_15/smart_pointer/src/: main.rs
chapter_15/weak_ref/: Cargo.toml
chapter_16/arc_1/: Cargo.toml
chapter_16/channel_1/: Cargo.toml
chapter_16/channel_2/: Cargo.toml
chapter_16/thread_1/: Cargo.toml
chapter_16/thread_2/: Cargo.toml
chapter_16/thread_3/: Cargo.toml
chapter_17/blog_1/: Cargo.toml
chapter_17/blog_1/src/: lib.rs  main.rs
chapter_17/blog_2/: Cargo.toml
chapter_17/blog_2/src/: lib.rs  main.rs
chapter_17/gui/: Cargo.toml
chapter_17/gui/src/: main.rs
chapter_17/poo_1/: Cargo.toml
chapter_18/: deconstruct.rs  patterns.rs
chapter_19/: type_alias.rs
chapter_19/ad_fn/: Cargo.toml
chapter_19/ad_trait/: Cargo.toml
chapter_19/ad_trait/src/: main.rs
chapter_19/hello_macro/: Cargo.toml
chapter_19/hello_macro/hello_macro_derive/: Cargo.toml
chapter_19/pankakes/: Cargo.toml
chapter_19/unsafe_1/: Cargo.toml
chapter_19/unsafe_1/src/: main.rs
chapter_2/guessing_game/: .gitignore  Cargo.toml
chapter_2/guessing_game/src/: main.rs
chapter_20/hello/: Cargo.toml
chapter_20/hello/src/: main.rs
chapter_20/hello_2/: Cargo.toml
chapter_20/hello_2/src/: lib.rs
chapter_20/hello_3/: Cargo.toml
chapter_5/rectangles/: Cargo.toml
chapter_5/rectangles/src/: main.rs
chapter_6/: enum_examples.rs  match_examples.rs
chapter_7/restaurant/: Cargo.toml
chapter_7/restaurant/src/: lib.rs
chapter_7/restaurantb/: Cargo.toml
chapter_8/: readcontent.rs
chapter_8/guessing_game/src/: main.rs
chapter_9/res1/: Cargo.toml
chapter_9/res1/src/: main.rs
cookbook/commandline/: Cargo.toml
cookbook/commandline/src/: main.rs
cookbook/ferris/: Cargo.toml
cookbook/invalidcsv/: Cargo.toml
cookbook/invalidcsv/src/: main.rs
cookbook/juliaset/: Cargo.toml
cookbook/juliaset/src/: main.rs
cookbook/readcsv/: Cargo.toml
cookbook/reqweb/: Cargo.toml
cookbook/reqweb/src/: main.rs
cookbook/rusty-journal/: Cargo.toml  test-journal.json
core/mir/: Cargo.toml
core/mir/src/: main.rs
no_std/app/: Cargo.toml
no_std/rt/: Cargo.toml  lint.x
no_std_book/app/: Cargo.toml
no_std_book/syst/: Cargo.toml
patterns/iterator/: Cargo.toml
patterns/observer/: Cargo.toml
typestates/basic/: Cargo.toml
typestates/consumer/: Cargo.toml
typestates/no_consumer/: Cargo.toml
typestates/zero_cost/: Cargo.toml
udemy/section_1/: Cargo.toml
udemy/section_2/: Cargo.toml
udemy/section_3/: Cargo.toml
udemy/section_4/: Cargo.toml
udemy/section_5/: Cargo.toml
udemy/section_6/: Cargo.toml
udemy/section_7/: Cargo.toml
udemy/section_8/: Cargo.toml
udemy/section_8_1/: Cargo.toml
web_assembly/hello-wasm/: Cargo.toml
web_assembly/practice/: Cargo.toml  README.md  package-lock.json  package.json
web_assembly/practice/js_app/: index.js
web_assembly/practice/src/: lib.rs  opt.rs
web_assembly/practice/ts_app/: package-lock.json  package.json
web_assembly/practice/ts_app/src/: index.ts  utils.ts
web_assembly/wasamb/: Cargo.toml  LICENSE_MIT
web_assembly/wasm-game-of-life/: Cargo.toml
(+33 files in other folders)
