[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }

actix-web = "4"
actix-identity = "0.4"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.5"
env_logger = "0.9"
r2d2 = "0.8"
rust-argon2 = "1"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sparkpost = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
time = "0.3"
fake = "2.4"
rand = "0.8"
