[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }

[dependencies.sea-orm]
version = "^0.7.0"
features = [
    "macros",
    "debug-print",
    "runtime-actix-native-tls",
    # "sqlx-mysql",
    "sqlx-postgres",
    # "sqlx-sqlite",
]
