[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
fake = "2.4"
rand = "0.8"
dotenv = "0.15"

[dependencies.sea-orm]
version = "^0.7.0"
features = [
    "macros",
    "debug-print",
    "runtime-actix-native-tls",
    # "sqlx-mysql",
    "sqlx-postgres",
    # "sqlx-sqlite",
]
