[package]
name = "restapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
entity = { path = "../entity" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
mongodb = "2.1.0"
futures = "0.3.21"
dotenv = "0.15"
derive_more = "0.99.5"
lettre = { version = "0.10.0-rc.6",  feature = ["full"] }
