[package]
name = "restapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../commons" }
entity = { path = "../entity" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
mongodb = "2.1.0"
futures = "0.3.21"
dotenv = "0.15"
derive_more = "0.99.5"
lettre = { version = "0.10.0-rc.6" }
jsonwebtoken = "8"
rust-argon2 = "1"
lazy_static = "1.4"
lapin = "2.1.1" # rabbit
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
fake = { version = "2.5", features=['uuid'] }
rand = "0.8"
