[package]
name = "streamtokyo"
version = "0.1.0"
authors = ["magocod <magoyeison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
mini-redis = "0.4"
