[package]
name = "section_6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version="1.4.2" , features=["postgres"]}
dotenv = "0.14.1"
anyhow = "1.0.30"
thiserror="1.0.17"
clap = "2.33.0"
bcrypt = "0.12.1"
